[gd_scene load_steps=9 format=3 uid="uid://6lgt51fk3khg"]

[ext_resource type="Script" uid="uid://b5pfchanircn2" path="res://Scripts/menus/settings_menu.gd" id="1_1ehr6"]
[ext_resource type="Theme" uid="uid://cfuny4aqpg8r2" path="res://Resources/Themes/default_theme.tres" id="1_7k4s8"]
[ext_resource type="FontFile" uid="uid://behuf74h25j5t" path="res://GameAssets/DynaPuff/DynaPuff-VariableFont_wdth,wght.ttf" id="3_p3kef"]

[sub_resource type="Theme" id="Theme_2t6o0"]
Label/fonts/font = ExtResource("3_p3kef")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jwn0c"]

[sub_resource type="Theme" id="Theme_gnr1q"]
Button/fonts/font = ExtResource("3_p3kef")
CheckButton/fonts/font = ExtResource("3_p3kef")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("3_p3kef")
Label/styles/normal = SubResource("StyleBoxEmpty_jwn0c")

[sub_resource type="Theme" id="Theme_lxusg"]
Label/fonts/font = ExtResource("3_p3kef")

[sub_resource type="Theme" id="Theme_o0vlm"]
Button/fonts/font = ExtResource("3_p3kef")
CheckButton/fonts/font = ExtResource("3_p3kef")
Label/fonts/font = ExtResource("3_p3kef")

[node name="Settings" type="Control" node_paths=PackedStringArray("return_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7k4s8")
script = ExtResource("1_1ehr6")
menu_name = "settings"
return_button = NodePath("VBoxContainer/Return")

[node name="Options" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 170.0
grow_horizontal = 2
theme = SubResource("Theme_2t6o0")
theme_override_font_sizes/font_size = 50
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TextBoxColor" type="ColorRect" parent="Options"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0714, 0.33866, 0.42, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -104.0
offset_right = 150.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="SoundOnOff" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
button_pressed = true
action_mode = 0
text = "Sound"
icon_alignment = 1

[node name="TextBoxColor" type="ColorRect" parent="VBoxContainer/SoundOnOff"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_right = 15.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0714, 0.33866, 0.42, 1)

[node name="Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lxusg")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextBoxColor" type="ColorRect" parent="VBoxContainer/Volume"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_right = 15.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0714, 0.33866, 0.42, 1)

[node name="volume_slider" type="HSlider" parent="VBoxContainer/Volume"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = 2.0
offset_right = 150.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
value = 70.0
rounded = true

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = SubResource("Theme_o0vlm")
theme_override_font_sizes/font_size = 40
text = "Return
"

[connection signal="toggled" from="VBoxContainer/SoundOnOff" to="." method="_on_sound_on_off_toggled"]
[connection signal="value_changed" from="VBoxContainer/Volume/volume_slider" to="." method="_on_volume_slider_value_changed"]
